@@ -29,6 +29,7 @@
 * Fixed issue with not loaded coupon forms
 * Fixed communication issue when all subscription is selected
 * Fixed user display name and level name issues for ping data
+* Fixed protection issue for BuddyPress group creation rule
 * Implemented new Authorize.net gateway which changes Authorize ARB and AIM gateways
 * Implemented membership access level meta box for posts and pages editing form
 * Implemented functionality which hides inactive members from BuddyPress members list
